solve code rabbit review